# microtemplate

./: Cargo.toml  README.md
benches/: bench.rs
microtemplate_derive/: Cargo.toml
microtemplate_derive/src/: lib.rs
src/: lib.rs
tests/: readme_example.rs  tests.rs
